# dms

./: .env  .gitignore  .gitmodules  Dockerfile  Pipfile  bootstrap.sh  ckan-entrypoint.sh  ckan-uwsgi.ini  pyproject.toml
.github/workflows/: build.yml
jenkins/: Jenkinsfile.build.groovy  dsl.groovy
util/data_migration/: ckan_loader.py  config.json
util/data_migration/inputs/demo_data/: demo_data.csv  groups.json  organizations.json
util/demo_data_loader/: config.json
util/demo_data_loader/demo_data/: datasets.json  groups.json  organizations.json
util/scripts/: cleanup_users.py  template_script.py
util/setup_test_db/: db_init.sh  db_init.sql  docker-compose.yml
