[tool.poetry]
name = "mdr"
version = "0.1.0"
description = "Common repository for Malawi Document Repository"
authors = ["Tomasz Sabała <tomek@fjelltopp.org>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "1.6.5"
Babel = "2.7.0"
Beaker = "1.11.0"
bleach = "3.3.0"
blinker = "1.4"
click = "7.1.2"
dominate = "2.6.0"
feedgen = "0.9.0"
Flask = "1.1.4"
Flask-Babel = "1.0.0"
flask-multistatic = "1.0"
Jinja2 = "2.11.3"
PyJWT = "2.1.0"
Markdown = "3.3.4"
passlib = "1.7.4"
polib = "1.1.1"
psycopg2 = "2.9.1"
python-magic = "0.4.24"
pysolr = "3.6.0"
python-dateutil = "2.8.1"
pytz = "2021.1"
PyUtilib = "6.0.0"
PyYAML = "5.4.1"
"repoze.who" = "2.3"
requests = "2.25.1"
rq = "1.9.0"
simplejson = "3.17.2"
SQLAlchemy = "1.3.5"
sqlparse = "0.4.1"
tzlocal = "2.1"
webassets = "2.0"
Werkzeug = {version = "1.0.1", extras = ["watchdog"]}
"zope.interface" = "5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
